tests/files/type_checker_tests/should_fail/108.cmdr
//Should fail pre-decrement on something not a lvalue
--"hi";
